@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-15T16:12:35Z",
+  "timestamp" : "2022-05-17T00:46:57Z",
   "count_outdated" : 65,
   "uniques_outdated" : 4,
-  "count" : 331,
-  "uniques" : 14,
+  "count" : 350,
+  "uniques" : 15,
   "views" : [
     {
       "timestamp": "2022-05-03T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-16T00:00:00Z",
+      "count": 19,
+      "count_minmax": [ 19, 19 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
