@@ -1,3 +1,10 @@
+2022-05-17T00:46:57Z:
+* notice: last 14d: all unq: 285 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 65 4 / 331 14
+* notice: next accum: outdated-all outdated-unq / all unq: 65 4 / 350 15
+* notice: prev exec diff / last date diff: unq all: +1 +19 -0 -0 / +1 +19 -0 -0
+* notice: changed dates: [2022-05-16]
+
 2022-05-15T16:12:35Z:
 * notice: last 14d: all unq: 266 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 9 3 / 282 14
